<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ajouter_etudiant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.appgestioncontacts.metier.entitites.AjouterAdminActivity">

    <RelativeLayout
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_alignParentTop="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            />
        <ImageButton
            android:id="@+id/btn_retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_back_button"
            android:layout_margin="3dp"/>

    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/lay1"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txt_Nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="30"
        android:textSize="30sp"
        android:layout_marginBottom="5dp"
        android:hint="@string/hint1"
        android:background="@drawable/a_border"
        />
    <EditText
        android:id="@+id/txt_Prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="30"
        android:textSize="30sp"
        android:layout_marginBottom="5dp"
        android:hint="@string/hint2"
        android:background="@drawable/a_border"
        />
    <EditText
        android:id="@+id/txt_Adresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="30"
        android:textSize="30sp"
        android:layout_marginBottom="5dp"
        android:hint="@string/hint3"
        android:background="@drawable/a_border"
        />
    <EditText
        android:id="@+id/txt_Tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="30"
        android:textSize="30sp"
        android:layout_marginBottom="5dp"
        android:hint="@string/hint4"
        android:background="@drawable/a_border"
        />








</LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

          <Button
              android:id="@+id/btn_Ajouter"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/btnAjouter"
              android:layout_alignParentRight="true"
              android:layout_margin="10dp"
              android:textSize="15sp"/>
        <Button
            android:id="@+id/btn_Annuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAnnuler"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:textSize="15sp"/>


    </RelativeLayout>


</RelativeLayout>
