<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_consulter_un_etudiant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.appgestioncontacts.metier.entitites.ConsulterUnEtudiant">
    <RelativeLayout
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_alignParentTop="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            />
        <ImageButton
            android:id="@+id/btn_retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_back_button"
            android:layout_margin="3dp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay1"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCode"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/txtCodeEtudiant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"/>
        <Button
            android:id="@+id/btnChercher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnR"
            android:textSize="20sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/lay2"
        android:layout_marginTop="15sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint1"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/nonValeur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint2"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/prenomValeur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint3"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/adresseValeur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint4"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/TelValeur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp">
            <Button
                android:id="@+id/btnModifier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnM"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/btnSupprimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnD"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
