<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_espace"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.appgestioncontacts.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            />
        <ImageButton
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/home"
            android:layout_margin="3dp"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/btn_space_etud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s1"
            android:textSize="25sp"

            />
        <Button
            android:id="@+id/btn_space_ensg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s2"
            android:textSize="25sp"/>
        <Button
            android:id="@+id/btn_space_admn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s3"
            android:textSize="25sp"/>

    </LinearLayout>
</RelativeLayout>
