<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_espace_etudiant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.appgestioncontacts.metier.entitites.EspaceEnseignant">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            />
        <ImageButton
            android:id="@+id/btn_retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_back_button"
            android:layout_margin="3dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/btn_ajouter_ens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ajEn"
            android:textSize="25sp"

            />
        <Button
            android:id="@+id/btn_Consulter_ens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conEn"
            android:textSize="25sp"/>
        <Button
            android:id="@+id/btn_Consultertout_ens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CONStEn"
            android:textSize="25sp"/>

    </LinearLayout>
</RelativeLayout>
